--- a/osticket/app/php.ini
+++ b/osticket/app/php.ini
@@ -933,8 +933,8 @@ extension=fileinfo
 extension=gd
 ;extension=gettext
 ;extension=gmp
-;extension=intl
-;extension=imap
+extension=intl
+extension=imap
 extension=mbstring
 ;extension=exif      ; Must be after mbstring as it depends on it
 extension=mysqli
@@ -963,7 +963,7 @@ extension=tidy
 ;extension=xsl
 extension=zip
 
-;zend_extension=opcache
+zend_extension=opcache
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
